[tool.poetry]
name = "Practice_GIT"
version = "0.1.0"
description = ""
authors = ["Ekaterina Nekhoroshkova <e_nekhoroshkova95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '.git'


[tool.isort]
# Максимальная длина строки
line_length = 119
# форматируется не более 1 импорта при вызове isort
force_single_line = true


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
